--- a/DojoPoker/.gitignore
+++ b/DojoPoker/.gitignore
@@ -4,6 +4,22 @@
 
 # IntelliJ project files
 *.iml
-.idea
-.out
+*.ipr
+*.iws
+.idea/
+out/
 gen
+
+# Mac
+.DS_Store
+
+# Maven
+target/
+release.properties
+
+# Eclipse
+.classpath
+.project
+.externalToolBuilders/
+.metadata
+.settings
